i have add the StarterGui and ScreenGui in the json default projet but there's a little problem i have to fix, this problem is when i connect to studio with this new json, it really do want i want, but it delete everything thas was  inside the ScreenGui before connecting it to rojo

--- a/default.project.json
+++ b/default.project.json
@@ -23,6 +23,14 @@
       }
     },
 
+    "StarterGui": {
+      "$className": "StarterGui",
+      "ScreenGui": {
+        "$className": "ScreenGui",
+        "$path": "src/StarterGui/ScreenGui"
+      }
+    },
+
     "Workspace": {
       "$properties": {
         "FilteringEnabled": true
@@ -50,6 +58,7 @@
         }
       }
     },
+
     "Lighting": {
       "$properties": {
         "Ambient": [
@@ -63,6 +72,7 @@
         "Technology": "Voxel"
       }
     },
+
     "SoundService": {
       "$properties": {
         "RespectFilteringEnabled": true
